<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/main_items"
        android:title="@string/weather">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:checkable="true"
                android:icon="@drawable/ic_weather_icon"
                android:title="@string/today_s_weather" />
            <item
                android:id="@+id/nav_tenday"
                android:checkable="true"
                android:icon="@drawable/ic_tenday"
                android:title="@string/ten_day_forcast" />
        </menu>
    </item>
    <item
        android:id="@+id/user_items"
        android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:checkable="true"
                android:icon="@drawable/ic_profile"
                android:title="@string/my_profile" />
            <item
                android:id="@+id/nav_settings"
                android:checkable="true"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:checkable="true"
                android:icon="@drawable/ic_signout"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>
