<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.heady.betterweather.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tenday"
        android:name="com.heady.betterweather.ui.tenday.TenDayFragment"
        android:label="@string/ten_day_forcast"
        tools:layout="@layout/fragment_tenday" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.heady.betterweather.ui.profile.ProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.heady.betterweather.ui.settings.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.heady.betterweather.ui.logout.LogoutFragment"
        android:label="fragment_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>