<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    tools:context=".view.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:elevation="10dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/iv_logo_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/better_weather_logo"
            android:src="@drawable/iv_bw_logo" />
    </androidx.cardview.widget.CardView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@+id/iv_logo">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_text_input_layout"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_text_input_layout"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@id/tv_register_click"
        android:text="@string/need_an_account"
        android:textStyle="italic"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_register_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_text_input_layout"
        android:layout_alignEnd="@id/password_text_input_layout"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:textColor="@color/purple_700"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_register"
        android:layout_alignEnd="@id/tv_register_click"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in" />


</RelativeLayout>